# CSNETWK-MCO3

./: .gitignore  README.md  makefile  pyproject.toml
docs/: RFC.md  TasksToDo.md
src/: __init__.py
src/config/: __init__.py  config.py
src/game/: __init__.py  tictactoe.py
src/manager/: __init__.py  command_manger.py  file_manager.py  follow_controller.py  group_manager.py  lsnp_controller.py  main.py  peer_manager.py  state.py
src/network/: __init__.py  broadcast.py  ip_tracker.py  network_manager.py  peer_listener.py
src/protocol/: __init__.py  lsnp_peer_mdns.py  message_handler.py  protocol_manager.py  protocol_parser.py
src/protocol/types/files/: avatar_handler.py  file_chunk_manager.py  file_transfer.py
src/protocol/types/messages/: file_messages.py  message_formats.py  peer_format.py
src/storage/: file_storage.py
src/ui/: __init__.py  commands.py  file_transfer_ui.py  log_data.py  logging.py
src/utils/: __init__.py  file_transfer.py  file_utils.py  parsers.py  progress_tracker.py  tokens.py
tests/: main.py
tests/manager/: test_file_manager.py
tests/protocol/: test_file_transfer.py  test_protocol.py
tests/ui/: test_logger.py
