[tool.poetry]
name = "csnetwrk-mco3"
version = "0.1.0"
description = "Need to Communicate with Friends? Try this Local Social Network Protocol Program!"
authors = ["Roan Cedric Campo <roan_campo@dlsu.edu.ph>"]
license = "Topics"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"